# rgb-to-segmentation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
rgb_to_segmentation/: __init__.py  api.py  clean.py  cli.py  nn.py  train.py  utils.py
rgb_to_segmentation/models/: __init__.py  base_classifier.py  cnn_decoder.py  pixelwise_classifier.py
